Modal popup JavaScript

--- a/Vanilla JS Popup Modals/index.html
+++ b/Vanilla JS Popup Modals/index.html
@@ -17,7 +17,7 @@
         <div class="body-blackout"></div>
 
         <section class="container">
-            <div class="card popup-trigger">
+            <div class="card popup-trigger" data-popup-trigger="one">
                 <div class="image-container">
                     <img class="image" src="../Slider/images/albert-dera-ILip77SbmOE-unsplash.jpg" alt="Imgae">
                 </div>
@@ -27,7 +27,7 @@
                     <button class="read-more">Read more <span class="arrow">&#10132</span></button>
                 </div>
             </div>
-            <div class="card popup-trigger">
+            <div class="card popup-trigger" data-popup-trigger="two">
                 <div class="image-container">
                     <img class="image" src="../Slider/images/albert-dera-ILip77SbmOE-unsplash.jpg" alt="Imgae">
                 </div>
@@ -37,7 +37,7 @@
                     <button class="read-more">Read more <span class="arrow">&#10132</span></button>
                 </div>
             </div>
-            <div class="card popup-trigger">
+            <div class="card popup-trigger" data-popup-trigger="three">
                 <div class="image-container">
                     <img class="image" src="../Slider/images/albert-dera-ILip77SbmOE-unsplash.jpg" alt="Imgae">
                 </div>
@@ -52,17 +52,17 @@
         <!-- Modals -->
 
         <div class="popup-modal shadow" data-popup-modal="one">
-            <i class="popup-modal__close"></i>
+            <i class="popup-modal__close">X</i>
             <h1>Modal One Title</h1>
         </div>
 
-        <div class="popup-modal shadow" data-popup-modal="one">
-            <i class="popup-modal__close"></i>
+        <div class="popup-modal shadow" data-popup-modal="two">
+            <i class="popup-modal__close">X</i>
             <h1>Modal Two Title</h1>
         </div>
 
-        <div class="popup-modal shadow" data-popup-modal="one">
-            <i class="popup-modal__close"></i>
+        <div class="popup-modal shadow" data-popup-modal="three">
+            <i class="popup-modal__close">X</i>
             <h1>Modal Three Title</h1>
         </div>
         <script src="javascript.js"></script>
