--- a/dom-project/dom-project.html
+++ b/dom-project/dom-project.html
@@ -18,8 +18,15 @@
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+
+
     <p>YouTube Subscribe</p>
     <button onclick="subscribe()" class="js-subscribe-button">Subscribe</button>
+
+    <p>Amazon Shipping Calculator</p>
+    <input placeholder="Cost of order" class="js-cost-input" onkeydown="handleCostonKeydown(event)">
+    <button onclick="calculatorTotal()">Calculator</button>
+    <p class="js-total-cost"></p>
 
     <script src="dom-project.js" async defer></script>
 </body>
