Style the Calculator

--- a/dom-project/dom-project.html
+++ b/dom-project/dom-project.html
@@ -21,11 +21,11 @@
 
 
     <p>YouTube Subscribe</p>
-    <button onclick="subscribe()" class="js-subscribe-button">Subscribe</button>
+    <button onclick="subscribe()" class="js-subscribe-button subscribe-button">Subscribe</button>
 
     <p>Amazon Shipping Calculator</p>
-    <input placeholder="Cost of order" class="js-cost-input" onkeydown="handleCostonKeydown(event)">
-    <button onclick="calculatorTotal()">Calculator</button>
+    <input placeholder="Cost of order" class="js-cost-input cost-input" onkeydown="handleCostonKeydown(event)">
+    <button onclick="calculatorTotal()" class="calculator-button">Calculator</button>
     <p class="js-total-cost"></p>
 
     <script src="dom-project.js" async defer></script>
