--- a/09-Rock-Paper-Scissors/rock-paper-scissors.html
+++ b/09-Rock-Paper-Scissors/rock-paper-scissors.html
@@ -9,17 +9,19 @@
 </head>
 
 <body>
-    <p>Rock Paper Scissors</p>
+    <p class="title">Rock Paper Scissors</p>
 
-    <button onclick="playGame('rock')">Rock</button>
+    <button onclick="playGame('rock')" class="move-button"><img src="images/rock-emoji.png" class="move-icon"></button>
 
-    <button onclick="playGame('paper')">Paper</button>
+    <button onclick="playGame('paper')" class="move-button"><img src="images/paper-emoji.png"
+            class="move-icon"></button>
 
-    <button onclick="playGame('scissors')">Scissors</button>
+    <button onclick="playGame('scissors')" class="move-button"><img src="images/scissors-emoji.png"
+            class="move-icon"></button>
 
-    <p class="js-result"></p>
+    <p class="js-result result"></p>
     <p class="js-move"></p>
-    <p class="js-score"></p>
+    <p class="js-score score"></p>
 
 
     <button onclick="
@@ -29,7 +31,8 @@
         // Remove the score from localStorage
         localStorage.removeItem('score')
         updateScoreElement();
-    ">Reset Score</button>
+    " class="reset-score-button">Reset Score</button>
+
     <script src="rock-paper-scissors.js"></script>
 </body>
 
