--- a/Todo-List/todo-list.html
+++ b/Todo-List/todo-list.html
@@ -21,6 +21,9 @@
     <p>Todo List</p>
     <input placeholder="Todo name" class="js-name-input">
     <button onclick="addTodo()">Add</button>
+
+    <div class="js-todo-list"></div>
+
     <script src="todo-list.js" async defer></script>
 </body>
 
