--- a/Todo-List/todo-list.html
+++ b/Todo-List/todo-list.html
@@ -20,8 +20,8 @@
         <![endif]-->
     <p>Todo List</p>
     <input placeholder="Todo name" class="js-name-input">
+    <input type="date" class="js-due-date-input">
     <button onclick="addTodo()">Add</button>
-
     <div class="js-todo-list"></div>
 
     <script src="todo-list.js" async defer></script>
